# papermc-plus-plus

./: .env.example  .gitignore  26.2.md  ARCHITECTURE.md  CMakeLists.txt  README.md  RELEASE_NOTES.md  package-lock.json  package.json
agents/: __init__.py  architect_agent.py  coder_agent.py  config.py  git_agent.py  orchestrator.py  parallel_runner.py
docs/: protocol_references.md  protocol_versions.json
include/core/network/: connection.hpp  server.hpp
include/core/protocol/: buffer.hpp  encryption.hpp  packet.hpp  play_packets.hpp  varint.hpp
include/core/scripting/: plugin_engine.hpp
include/core/world/: block.hpp  chunk.hpp  chunk_streamer.hpp  entity.hpp  generator.hpp
plugins/: example.lua
scripts/: auto_test_and_fix.py  codegen_registries.py  fetch_wiki_specs.py  generate_all_mc_headers.py  test_bot.js  test_tags.py
src/: main.cpp
src/network/: server.cpp
src/protocol/: buffer.cpp
src/world/: chunk.cpp
tests/: test_protocol.cpp
